--- a/hemantProject/test-output/index.html
+++ b/hemantProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Guru99" class="navigator-link ">
-                    <span>F:\Testing Stuff\Automation\SeicProject\testng.xml</span>
+                    <span>F:\Testing Stuff\Automation\GitHub\AutomationSelenium\hemantProject\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Guru99">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Guru99" title="com.seic.qa.testcases.LoginPageTest" class="method navigator-link" hash-for-method="verifySignIn">verifySignIn</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Guru99" title="com.hemant.qa.testcases.LoginPageTest" class="method navigator-link" hash-for-method="verifySignIn">verifySignIn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Guru99 -->
@@ -120,7 +120,7 @@
           <div class="suite-Guru99-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.seic.qa.testcases.LoginPageTest</span>
+              <span class="class-name">com.hemant.qa.testcases.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -135,7 +135,7 @@
         </div> <!-- panel Guru99 -->
         <div panel-name="test-xml-Guru99" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\Testing Stuff\Automation\SeicProject\testng.xml</span>
+            <span class="header-content">F:\Testing Stuff\Automation\GitHub\AutomationSelenium\hemantProject\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Guru99&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;TestCase1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.seic.qa.testcases.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.hemant.qa.testcases.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- TestCase1 --&gt;
 &lt;/suite&gt; &lt;!-- Guru99 --&gt;
@@ -187,13 +187,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifySignIn')
-data.setCell(0, 2, 'com.seic.qa.testcases.LoginPageTest')
-data.setCell(0, 3, 10016);
+data.setCell(0, 2, 'com.hemant.qa.testcases.LoginPageTest')
+data.setCell(0, 3, 5070);
 window.suiteTableData['Guru99']= { tableData: data, tableDiv: 'times-div-Guru99'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Guru99">
               </div> <!-- times-div-Guru99 -->
             </div> <!-- times-div -->
@@ -219,18 +219,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.seic.qa.testcases.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.hemant.qa.testcases.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">verifySignIn</span>
-                <span class="method-start">106562 ms</span>
+                <span class="method-start">18925 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">116743 ms</span>
+                <span class="method-start">24095 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
