--- a/hemantProject/test-output/old/Guru99/classes.html
+++ b/hemantProject/test-output/old/Guru99/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.seic.qa.testcases.LoginPageTest</td>
+<td>com.hemant.qa.testcases.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
