--- a/hemantProject/test-output/old/Guru99/methods.html
+++ b/hemantProject/test-output/old/Guru99/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Guru99</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79a8a8">  <td>18/09/26 23:54:13</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.seic.qa.testcases.LoginPageTest@618425b5]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@454104863</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>18/09/26 23:56:00</td>   <td>106556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignIn()[pri:0, instance:com.seic.qa.testcases.LoginPageTest@618425b5]">verifySignIn</td> 
-  <td>main@454104863</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>18/09/26 23:56:10</td>   <td>116737</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.seic.qa.testcases.LoginPageTest@618425b5]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@454104863</td>   <td></td> </tr>
+<tr bgcolor="76bb98">  <td>18/09/29 00:11:29</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:com.hemant.qa.testcases.LoginPageTest@2898ac89]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="76bb98">  <td>18/09/29 00:11:48</td>   <td>18919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignIn()[pri:0, instance:com.hemant.qa.testcases.LoginPageTest@2898ac89]">verifySignIn</td> 
+  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="76bb98">  <td>18/09/29 00:11:53</td>   <td>24089</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:com.hemant.qa.testcases.LoginPageTest@2898ac89]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
 </table>
